--- a/main.html
+++ b/main.html
@@ -84,6 +84,7 @@
 
             <main class="content index contain-with-footer">
                 <section class="intro main section">
+                    <img src="img/intro/bg.png" alt="intro-bg" class="intro__bg">
                     <div class="container">
                         <div class="intro__row">
                             <div class="intro__info">
@@ -94,9 +95,9 @@
                                 </h1>
                                 <p>Богатый питательными веществами грунт отлично подходит для благоустройства и озеленения территорий, для повышения качества почвы</p>
                                 <div class="btns">
-                                    <button class="btn btn-callback">
+                                    <a href="#" class="btn">
                                         Доставка
-                                    </button>
+                                    </a>
                                     <button class="btn btn__bordered">
                                         Самовывоз
                                     </button>
@@ -104,8 +105,8 @@
                             </div>
                         </div>
                     </div>
-                    <img class="intro__img" src="img/intro/index.png" alt="intro">
                 </section>
+                <img class="intro__img" src="img/intro/index.png" alt="intro">
                 <section class="our-services section">
                     <div class="container">
                         <h2 class="white">Виды плодородной земли</h2>
@@ -215,7 +216,8 @@
                             </div>
                             <div class="block-with-image__info">
                                 <h2>
-                                    Самовывоз земли 
+                                    Самовывоз земли
+                                    <br>
                                     и грунта с площадки
                                 </h2>
                                 <p>
