--- a/contacts.html
+++ b/contacts.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-    <script defer src="js/app.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240305200243">
+    <link rel="stylesheet" href="css/style.min.css?_v=20240305200243">
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20240305200243"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js?_v=20240305200243"></script>
+    <script defer src="js/app.min.js?_v=20240305200243"></script>
     <title>Контакты</title>
 </head>
 
@@ -28,8 +28,10 @@
             <div class="header__menu">
                 <nav class="header__links">
                     <div class="dropdown-container">
-                        <div class="arrow"></div>
-                        <a href="#" class="header__link dropdown-toggle hover-dropdown">Каталог</a>
+                        <a href="#" class="header__link dropdown-toggle hover-dropdown">
+                            Каталог
+                            <div class="arrow"></div>
+                        </a>
                         <ul class="header-down__menu dropdown-menu ">
                             <li class="header-down__link">
                                 <a href="#">Продукция</a>
@@ -112,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="contacts__map">
-                                <img src="img/map.png" alt="">
+                                <picture><source srcset="img/map.webp" type="image/webp"><img src="img/map.png" alt=""></picture>
                             </div>
                         </div>
                     </div>
