--- a/pickup.html
+++ b/pickup.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240305200243">
-    <link rel="stylesheet" href="css/style.min.css?_v=20240305200243">
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20240305200243"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js?_v=20240305200243"></script>
-    <script defer src="js/app.min.js?_v=20240305200243"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script defer src="js/app.min.js"></script>
     <title>Самовывоз</title>
 </head>
 
@@ -133,7 +133,7 @@
                                     </a>
                                 </div>
                                 <div class="block-with-image__img">
-                                    <picture><source srcset="img/services/10.webp" type="image/webp"><img src="img/services/10.png" alt="10"></picture>
+                                    <img src="img/services/10.png" alt="10">
                                 </div>
                             </div>
                             <div class="block-with-image__row">
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="block-with-image__img small">
                                     <h2>КАРТА ПЛОЩАДКИ/СКЛАДА</h2>
-                                    <picture><source srcset="img/services/11.webp" type="image/webp"><img src="img/services/11.png" alt="10"></picture>
+                                    <img src="img/services/11.png" alt="10">
                                 </div>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                                     </a>
                                 </div>
                                 <div class="block-with-image__img">
-                                    <picture><source srcset="img/services/10.webp" type="image/webp"><img src="img/services/10.png" alt="10"></picture>
+                                    <img src="img/services/10.png" alt="10">
                                 </div>
                             </div>
                             <div class="block-with-image__row">
@@ -232,7 +232,7 @@
                                 </div>
                                 <div class="block-with-image__img small">
                                     <h2>КАРТА ПЛОЩАДКИ/СКЛАДА</h2>
-                                    <picture><source srcset="img/services/11.webp" type="image/webp"><img src="img/services/11.png" alt="10"></picture>
+                                    <img src="img/services/11.png" alt="10">
                                 </div>
                             </div>
                         </div>
