--- a/services.html
+++ b/services.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240305200243">
-    <link rel="stylesheet" href="css/style.min.css?_v=20240305200243">
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20240305200243"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js?_v=20240305200243"></script>
-    <script defer src="js/app.min.js?_v=20240305200243"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script defer src="js/app.min.js"></script>
     <title>Services</title>
 </head>
 
@@ -113,7 +113,7 @@
                                 </footer>
                             </div>
                             <div class="page-intro__image">
-                                <picture><source srcset="img/photogallery/1.webp" type="image/webp"><img src="img/photogallery/1.png" alt="image"></picture>
+                                <img src="img/photogallery/1.png" alt="image">
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                 <a href="tel:8 (965) 013-90-96" class="sale section">
                     <div class="container">
                         <div class="sale__row">
-                            <picture><source srcset="img/sale/bg.webp" type="image/webp"><img src="img/sale/bg.png" alt="bg" class="sale__bg"></picture>
+                            <img src="img/sale/bg.png" alt="bg" class="sale__bg">
                             <p>Продажа/отгрузка</p>
                             <img src="img/svgicons/phone-white.svg" alt="phone-white">
                             <p>8 (965) 013-90-96</p>
@@ -159,7 +159,7 @@
                         <div class="block-flex-row">
                             <div class="block-with-image__row">
                                 <div class="block-with-image__img right">
-                                    <picture><source srcset="img/services/7.webp" type="image/webp"><img src="img/services/7.png" alt="image"></picture>
+                                    <img src="img/services/7.png" alt="image">
                                 </div>
                                 <div class="block-with-image__info">
                                     <h2>Текст об услугах</h2>
@@ -168,7 +168,7 @@
                             </div>
                             <div class="block-with-image__row">
                                 <div class="block-with-image__img left">
-                                    <picture><source srcset="img/services/8.webp" type="image/webp"><img src="img/services/8.png" alt="image"></picture>
+                                    <img src="img/services/8.png" alt="image">
                                 </div>
                                 <div class="block-with-image__info">
                                     <h2>
@@ -231,16 +231,16 @@
                         <h2>Фотогалерея</h2>
                         <div class="photogalley__row text-white">
                             <div class="photogalley__photo big">
-                                <picture><source srcset="img/photogallery/1.webp" type="image/webp"><img src="img/photogallery/1.png" alt=""></picture>
+                                <img src="img/photogallery/1.png" alt="">
                             </div>
                             <div class="photogalley__photo">
-                                <picture><source srcset="img/photogallery/2.webp" type="image/webp"><img src="img/photogallery/2.png" alt=""></picture>
+                                <img src="img/photogallery/2.png" alt="">
                             </div>
                             <div class="photogalley__photo">
-                                <picture><source srcset="img/photogallery/3.webp" type="image/webp"><img src="img/photogallery/3.png" alt=""></picture>
+                                <img src="img/photogallery/3.png" alt="">
                             </div>
                             <div class="photogalley__photo">
-                                <picture><source srcset="img/photogallery/4.webp" type="image/webp"><img src="img/photogallery/4.png" alt=""></picture>
+                                <img src="img/photogallery/4.png" alt="">
                             </div>
                             <div class="photogalley__more">
                                 <img src="img/svgicons/photogallery-more.svg" alt="photogallery-more">
@@ -279,27 +279,27 @@
                         <h2>Похожие услуги</h2>
                         <div class="another-services__row">
                             <a href="#" class="our-services__item">
-                                <picture><source srcset="img/services/1.webp" type="image/webp"><img class="our-services__bg" src="img/services/1.png" alt="bg"></picture>
+                                <img class="our-services__bg" src="img/services/1.png" alt="bg">
                                 <p>
                                     растительный
                                     грунт
                                 </p>
                             </a>
                             <a href="#" class="our-services__item">
-                                <picture><source srcset="img/services/2.webp" type="image/webp"><img class="our-services__bg" src="img/services/2.png" alt="bg"></picture>
+                                <img class="our-services__bg" src="img/services/2.png" alt="bg">
                                 <p>
                                     сеяный
                                     грунт
                                 </p>
                             </a>
                             <a href="#" class="our-services__item">
-                                <picture><source srcset="img/services/3.webp" type="image/webp"><img class="our-services__bg" src="img/services/3.png" alt="bg"></picture>
+                                <img class="our-services__bg" src="img/services/3.png" alt="bg">
                                 <p>
                                     чернозем
                                 </p>
                             </a>
                             <a href="#" class="our-services__item">
-                                <picture><source srcset="img/services/4.webp" type="image/webp"><img class="our-services__bg" src="img/services/4.png" alt="bg"></picture>
+                                <img class="our-services__bg" src="img/services/4.png" alt="bg">
                                 <p>
                                     плодородный грунт
                                 </p>
