--- a/contacts.html
+++ b/contacts.html
@@ -32,39 +32,16 @@
                             Каталог
                             <div class="arrow"></div>
                         </a>
-                        <ul class="header-down__menu dropdown-menu ">
-                            <li class="header-down__link">
-                                <a href="#">Продукция</a>
-                                <!-- <ul class="header-down__submenu">
-                                    <li class="header__li">
-                                        <a href="#">Испытания</a>
-                                    </li>
-                                    <li class="header__li">
-                                        <a href="#">Испытания</a>
-                                    </li>
-                                    <li class="header__li">
-                                        <a href="#">Испытания</a>
-                                    </li>
-                                </ul> -->
-                            </li>
-                            <li class="header-down__link">
-                                <a href="#">Оченб длинное название</a>
-                                <!-- <ul class="header-down__submenu">
-                                    <li class="header__li">
-                                        <a href="#">Испытания1</a>
-                                    </li>
-                                    <li class="header__li">
-                                        <a href="#">Испытания1</a>
-                                    </li>
-                                </ul> -->
-                            </li>
-                            <li>
-                                <a href="#">Продукция</a>
-                            </li>
-                            <li>
-                                <a href="#">Продукция</a>
-                            </li>
-                        </ul>
+                        <div class="header-down__menu dropdown-menu">
+                            <a href="#" class="header-down__link">
+                                Продукция
+                            </a>
+                            <a href="#" class="header-down__link">
+                                Оченб длинное название
+                            </a>
+                            <a href="#">Продукция</a>
+                            <a href="#">Продукция</a>
+                        </div>
                     </div>
                     <a href="#">Грунт</a>
                     <a href="#">Объекты</a>
